--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ $(document).ready(function()
 </div>
 <div class="col-3">
 <div id="wb_Text12">
-<span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br><br></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;"><strong>إتصل اليوم&nbsp; </strong></span><span style="color:#000080;font-family:Cairo;font-size:16px;line-height:24px;"><strong>01094899251&nbsp; -&nbsp; 01095021547</strong></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:16px;"><strong><br></strong></span>
+<span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br><br></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;"><strong>إتصل اليوم&nbsp; </strong></span><span style="color:#000080;font-family:Cairo;font-size:16px;line-height:24px;"><strong>01094899251&nbsp; -&nbsp; </strong></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:16px;"><strong><br></strong></span>
 </div>
 </div>
 </div>
