--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>شركة إبن البلد لنقل الاثاث 01094899251</title>
+<title>شركة مكة لنقل الاثاث 01205474212</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="moving.png" rel="icon" sizes="512x512" type="image/png">
 <link href="base/jquery-ui.min.css" rel="stylesheet">
@@ -657,12 +657,12 @@ $(document).ready(function()
 <img src="images/logo1.png" id="Image6" alt="" width="616" height="515">
 </div>
 <div id="wb_Text13">
-<span style="color:#000000;font-family:Arial;font-size:13px;line-height:24px;"><br></span><span style="color:#000000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">شركة </span><span style="color:#008000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">إبن البلد </span><span style="color:#000000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">لنقل وتغليف الأثاث<br></span>
+<span style="color:#000000;font-family:Arial;font-size:13px;line-height:24px;"><br></span><span style="color:#000000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">شركة </span><span style="color:#008000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">مكة </span><span style="color:#000000;font-family:'Cairo';font-weight:900;font-size:17px;line-height:24px;">لنقل وتغليف الأثاث<br></span>
 </div>
 </div>
 <div class="col-3">
 <div id="wb_Text12">
-<span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br><br></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;"><strong>إتصل اليوم&nbsp; </strong></span><span style="color:#000080;font-family:Cairo;font-size:16px;line-height:24px;"><strong>01094899251&nbsp; -&nbsp; </strong></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:16px;"><strong><br></strong></span>
+<span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br><br></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;"><strong>إتصل اليوم&nbsp; </strong></span><span style="color:#000080;font-family:Cairo;font-size:16px;line-height:24px;"><strong>01205474212&nbsp; - 01011306420&nbsp; </strong></span><span style="color:#000000;font-family:Cairo;font-size:16px;line-height:16px;"><strong><br></strong></span>
 </div>
 </div>
 </div>
@@ -699,7 +699,7 @@ $(document).ready(function()
 <div class="row">
 <div class="col-1">
 <div id="wb_Text1">
-<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">شركة إبن البلد لنقل الأثاث لديها خبرة كافية في مجال النقل , بالاضافة الي انها تمتلك جميع الامكانيات والمعدات والأدوات والطاقة البشرية التي مكنتها من تقديم خدمة نقل عفش مميزة علي أعلي مستوي مستوي يليق عملائها.<br><br>تتمثل تلك الامكانيات في أحدثوأفضل أجهزة النقل,&nbsp; وأفضل الادوات التي تستخدم في نقل العفش من عدد وأدوات يدوية لحمل الاثاث مثل أشرطة الكتف , وأحدث أدوات فك وتركيب الاثاث, كذلك أجهزة مخصصة لحمل العفش مثل الاوناش الهيدروليكية والاوناش الكهربية و متسلق السلالم الكهربائي , وكذلك أحدث سيارات نقل الاثاث المغلقة منها والمفتوح حتي تقدم الشركة في النهاية خددمة نقل أثاث لا يعلي عليها</span>
+<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">شركة مكة لنقل الأثاث لديها خبرة كافية في مجال النقل , بالاضافة الي انها تمتلك جميع الامكانيات والمعدات والأدوات والطاقة البشرية التي مكنتها من تقديم خدمة نقل عفش مميزة علي أعلي مستوي مستوي يليق عملائها.<br><br>تتمثل تلك الامكانيات في أحدثوأفضل أجهزة النقل,&nbsp; وأفضل الادوات التي تستخدم في نقل العفش من عدد وأدوات يدوية لحمل الاثاث مثل أشرطة الكتف , وأحدث أدوات فك وتركيب الاثاث, كذلك أجهزة مخصصة لحمل العفش مثل الاوناش الهيدروليكية والاوناش الكهربية و متسلق السلالم الكهربائي , وكذلك أحدث سيارات نقل الاثاث المغلقة منها والمفتوح حتي تقدم الشركة في النهاية خددمة نقل أثاث لا يعلي عليها</span>
 </div>
 </div>
 </div>
@@ -727,7 +727,7 @@ $(document).ready(function()
 <div id="Divider3">
 <hr id="DividerLine3">
 <div id="wb_Heading4">
-<h2 id="Heading4">شركة إبن البلد لنقل وتغليف العفش</h2>
+<h2 id="Heading4">شركة مكة لنقل وتغليف العفش</h2>
 </div>
 <hr id="DividerLine4">
 </div>
@@ -741,7 +741,7 @@ $(document).ready(function()
 <div class="row">
 <div class="col-1">
 <div id="wb_Text11">
-<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">تقوم شركة إبن البلد باعتبارها واحدة من افضل شركات نقل الاثاث بالمقطم بوضع خطة مدروسة قبل البدء في عملية النقل حتي تسهل العملية علي العمال , فبمجرد اتصال العميل لطلب الخدمة يذهب المندوب الي المكان المحدد لمعاينة الموبيليا ومعرفة موقع الشقة وهل سيحتاج الأمر الي وجود أوناش هيدروليكية ام لا , ومعرفة ميعاد تسليم الشقة والعفش مفروش , وكذلك التكلفة النهائية للنقل .<br></span><span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br></span>
+<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">تقوم شركة مكة باعتبارها واحدة من افضل شركات نقل الاثاث بالمقطم بوضع خطة مدروسة قبل البدء في عملية النقل حتي تسهل العملية علي العمال , فبمجرد اتصال العميل لطلب الخدمة يذهب المندوب الي المكان المحدد لمعاينة الموبيليا ومعرفة موقع الشقة وهل سيحتاج الأمر الي وجود أوناش هيدروليكية ام لا , ومعرفة ميعاد تسليم الشقة والعفش مفروش , وكذلك التكلفة النهائية للنقل .<br></span><span style="color:#000000;font-family:Arial;font-size:13px;line-height:16px;"><br></span>
 </div>
 </div>
 </div>
@@ -783,7 +783,7 @@ $(document).ready(function()
 <div id="Divider4">
 <hr id="DividerLine5">
 <div id="wb_Heading5">
-<h2 id="Heading5">شركة إبن البلد لنقل وتغليف الأثاث</h2>
+<h2 id="Heading5">شركة مكة لنقل وتغليف الأثاث</h2>
 </div>
 <hr id="DividerLine7">
 </div>
@@ -793,7 +793,7 @@ $(document).ready(function()
 <div class="row">
 <div class="col-1">
 <div id="wb_Text14">
-<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">الكثير منا عندما يفكر في الانتقال الي مسكن جديد يفكر في كيفية نقل كل القطع الكبيرة والصغيرة وانزالها من الادوار العالية دون ان تتعرض لاي ضرر , لكن مع ونش رفع الأثاث الذي توفره شركة إبن البلد باعتبارها واحدة من افضل شركات نقل عفش بالجيزة اصبح الامر في غاية السهولة لان هذه الاوناش تستطيع ان تصل الي الادوار الشاهقة&nbsp; وتقوم بانزال القطع الكبيرة التي يصعب تفكيكها ورفعها بكل سهولة ويسر دون ان تتعرض لأي خدش أو كسر&nbsp; كما كان يحدث عند انزاله او رفعه عن طريق المصاعد والمداخل الضيقة , وبذلك شركة إبن البلد افضل شركة نقل عفش بمصر تضمن لك توصيل عفش منزلك أو فيلتك أو شقتك أو شركتك او حتي مكتبك لاي مكان في مصر مهما كانت المسافة بعيدة دون تلف أو خدش صغير , فلا ترهق نفسك او تضيع وقت في عناء عمليات النقل واترك ذلك لشركة متخصصة وذو خبرة في مجال نقل العفش كشركة إبن البلد افضل شركة نقل عفش فى مصر.<br></span>
+<span style="color:#000000;font-family:Cairo;font-size:16px;line-height:24px;">الكثير منا عندما يفكر في الانتقال الي مسكن جديد يفكر في كيفية نقل كل القطع الكبيرة والصغيرة وانزالها من الادوار العالية دون ان تتعرض لاي ضرر , لكن مع ونش رفع الأثاث الذي توفره شركة مكة باعتبارها واحدة من افضل شركات نقل عفش بالجيزة اصبح الامر في غاية السهولة لان هذه الاوناش تستطيع ان تصل الي الادوار الشاهقة&nbsp; وتقوم بانزال القطع الكبيرة التي يصعب تفكيكها ورفعها بكل سهولة ويسر دون ان تتعرض لأي خدش أو كسر&nbsp; كما كان يحدث عند انزاله او رفعه عن طريق المصاعد والمداخل الضيقة , وبذلك شركة مكة افضل شركة نقل عفش بمصر تضمن لك توصيل عفش منزلك أو فيلتك أو شقتك أو شركتك او حتي مكتبك لاي مكان في مصر مهما كانت المسافة بعيدة دون تلف أو خدش صغير , فلا ترهق نفسك او تضيع وقت في عناء عمليات النقل واترك ذلك لشركة متخصصة وذو خبرة في مجال نقل العفش كشركة مكة افضل شركة نقل عفش فى مصر.<br></span>
 </div>
 </div>
 </div>
@@ -869,10 +869,10 @@ $(document).ready(function()
 <h1 id="Heading1">أفضل شركة نقل فى مصر</h1>
 </div>
 <div id="wb_Text2">
-<span style="color:#000000;">تنفرد شركة إبن البلدبأكبر فريق عمل في مصر متخصص في مختلف أعمال النقل , لديه خبرة كبيرة في هذا المجال , كما أن الشركة تزودهم بأحدث الأدوات , منهم النجاريين والفنيين وفنيين الكهرباء , وجميعهم ذو خبرة كبيرة في أعمال النقل من فك وتركيب غرف نوم وغرف أطفال و مطابخ وأجهزة كهربائية وستائر وتكييفات وجميع محتويات المنزل , كما أن لديهم خبرة كبيرة في أعمال التغليف و تنزيل ورفع العفش وتحميله داخل سيارات النقل بنظام وبطرق معينة تضمن وصوله الي اي مكان بأمان دون أن يحدث له أي ضرر.</span>
+<span style="color:#000000;">تنفرد شركة مكةبأكبر فريق عمل في مصر متخصص في مختلف أعمال النقل , لديه خبرة كبيرة في هذا المجال , كما أن الشركة تزودهم بأحدث الأدوات , منهم النجاريين والفنيين وفنيين الكهرباء , وجميعهم ذو خبرة كبيرة في أعمال النقل من فك وتركيب غرف نوم وغرف أطفال و مطابخ وأجهزة كهربائية وستائر وتكييفات وجميع محتويات المنزل , كما أن لديهم خبرة كبيرة في أعمال التغليف و تنزيل ورفع العفش وتحميله داخل سيارات النقل بنظام وبطرق معينة تضمن وصوله الي اي مكان بأمان دون أن يحدث له أي ضرر.</span>
 </div>
 <div id="wb_Shape1">
-<a href="tel:01094899251"><img src="images/img0001.png" id="Shape1" alt="" width="102" height="44"></a>
+<a href="tel:01205474212"><img src="images/img0001.png" id="Shape1" alt="" width="102" height="44"></a>
 </div>
 </div>
 </div>
@@ -934,7 +934,7 @@ $(document).ready(function()
 <a href="./index.html"><div id="IconFont1"><i class="fa fa-facebook"></i></div></a>
 </div>
 <div id="wb_Text9">
-<span style="color:#FFFFFF;font-family:Cairo;font-size:13px;line-height:39px;"> شركة إبن البلد لنقل الاثاث </span><span style="color:#FFFFFF;font-family:Cairo;font-size:21px;line-height:39px;">©</span><span style="color:#FFFFFF;font-family:Cairo;font-size:13px;line-height:39px;"> جميع الحقوق محفوظة </span>
+<span style="color:#FFFFFF;font-family:Cairo;font-size:13px;line-height:39px;"> شركة مكة لنقل الاثاث </span><span style="color:#FFFFFF;font-family:Cairo;font-size:21px;line-height:39px;">©</span><span style="color:#FFFFFF;font-family:Cairo;font-size:13px;line-height:39px;"> جميع الحقوق محفوظة </span>
 </div>
 </div>
 <div class="col-3">
@@ -944,7 +944,7 @@ $(document).ready(function()
 </div>
 <div id="Layer2">
 <div id="wb_Image5">
-<a href="tel:01094899251"><img src="images/phone11.png" id="Image5" alt="" width="64" height="70"></a></div>
+<a href="tel:01205474212"><img src="images/phone11.png" id="Image5" alt="" width="64" height="70"></a></div>
 </div>
 <div id="preloader"></div>
 </body>
