--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html>
 <head>
+
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WC6TWWFS');</script>
+<!-- End Google Tag Manager -->
+
+
 <meta charset="utf-8">
 <title>شركة مكة لنقل الاثاث 01205474212</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -635,6 +646,14 @@ $(document).ready(function()
 </head>
 <body>
 
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WC6TWWFS"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+
+   
 <div id="wb_PageHeader">
 <div id="PageHeader">
 <div class="row">
